--- a/gym3.css
+++ b/gym3.css
@@ -252,6 +252,16 @@ p2{
     font-weight: bold;
 }
 
+footer {
+    text-align: center;
+}
+
+p2 {
+    color:black;
+    font-size: large;
+}
+
+
 #bar{
     display: none;
     font-size: 25px;
